--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 asgiref==3.5.2
 backports.zoneinfo==0.2.1
-Django==4.0.4
+Django==3.2.11
 flake8==4.0.1
 mccabe==0.6.1
 pycodestyle==2.8.0
 pyflakes==2.4.0
+pytz==2022.1
 sqlparse==0.4.2
