--- a/.github/workflows/django.yaml
+++ b/.github/workflows/django.yaml
@@ -25,9 +25,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Lint with Flake8
-      run: |
-        flake8 .
+    # - name: Lint with Flake8
+    #   run: |
+    #     flake8 .
     - name: Run Tests
       run: |
         python demo/manage.py test
